--- a/css/general.css
+++ b/css/general.css
@@ -24,6 +24,9 @@
 	margin: 3%;
 	display:inline-block;
 	text-align: center;
+	border-bottom: 3px solid #5CCF9B;
+	border-radius: 15px/8px;
+	line-height: 2.4;
 }
 	.cocktail_resume > img {
 		max-width:100%;
