--- a/Heyleon/css/heyleon.css
+++ b/Heyleon/css/heyleon.css
@@ -96,14 +96,14 @@ button.simple:active {
 	-webkit-perspective:500px;-moz-perspective:500px;-ms-perspective:500px;-o-perspective:500px;
 }
 	.flip-card:hover .flip{
-		transform: rotateX(180deg);
-		-webkit-transform: rotateX(180deg);-moz-transform: rotateX(180deg);-ms-transform: rotateX(180deg);-o-transform: rotateX(180deg);
+		transform: rotateY(180deg);
+		-webkit-transform: rotateY(180deg);-moz-transform: rotateY(180deg);-ms-transform: rotateY(180deg);-o-transform: rotateY(180deg);
 	}
 .flip {
 	height:300px;
 	box-shadow:0 0 15px black;
-	transform: rotateX(0deg);
-	-webkit-transform: rotateX(0deg);-moz-transform: rotateX(0deg);-ms-transform: rotateX(0deg);-o-transform: rotateX(0deg);
+	transform: rotateY(0deg);
+	-webkit-transform: rotateY(0deg);-moz-transform: rotateY(0deg);-ms-transform: rotateY(0deg);-o-transform: rotateY(0deg);
 	transition: all 1s ease;
 	-webkit-transition: all 1s ease;-moz-transition: all 1s ease;-ms-transition: all 1s ease;-o-transition: all 1s ease;
 	transform-style: preserve-3d;
@@ -117,8 +117,8 @@ button.simple:active {
 	}
 	.flip > div:last-child {
 		background:#333;
-		transform: rotateX(180deg);
-		-webkit-transform: rotateX(180deg);-moz-transform: rotateX(180deg);-ms-transform: rotateX(180deg);-o-transform: rotateX(180deg);
+		transform: rotateY(180deg) rotateZ(180deg);
+		-webkit-transform: rotateY(180deg) rotateZ(180deg);-moz-transform: rotateY(180deg) rotateZ(180deg);-ms-transform: rotateY(180deg) rotateZ(180deg);-o-transform: rotateY(180deg) rotateZ(180deg);
 	}
 		.flip > div:last-child p {
 			color:white;
