--- a/css/general.css
+++ b/css/general.css
@@ -19,6 +19,7 @@
 	box-shadow: inset 0px 0px 38px rgba(27, 100, 217, 0.43),0px 5px 90px rgba(0, 0, 0, 0.53);
 }
 
+/* HOME */
 .cocktail_resume {
 	width: 19%;
 	margin: 3%;
@@ -49,7 +50,7 @@
 		width: 100%;
 		border-bottom: 3px solid #3D47BF;
 		background: rgba(214, 220, 109, 0.35);
-		transform: rotateX(180deg);
+		transform: rotateX(180deg) rotateZ(180deg);
 		color: #E03939;
 	}
 		.cocktail_resume .flip > div:last-child > * {
@@ -72,6 +73,21 @@
 			white-space: nowrap;
 			left: 0;
 		}
+
+/* COCKTAILS */
+.cocktail > div:first-child {
+	width: 100%;
+}
+	.cocktail > img {
+		margin-top: -60px;
+		float:left;
+		height: 250px;
+	}
+	.cocktail > div {
+		margin: 60px 0px;
+		text-align: center;
+		float: center;
+	}
 
 body {
 	font-family: Amaranth, Verdana, serif;
