Liste des cocktails (1)

--- a/css/general.css
+++ b/css/general.css
@@ -8,6 +8,16 @@
 	.nav.navbar-nav > li > a:hover {
 		color: #3D47BF;
 	}
+.nav-pills > li:not(:first-child) {
+	border-left:3px solid;
+}
+.nav-pills > li {
+	text-align:center;
+	padding: 15px;
+	vertical-align: middle;
+	font-size: 16px;
+}
+	
 
 .middle_container {
 	padding-top:69px;
@@ -17,6 +27,13 @@
 	margin: auto;
 	border: 2px solid #C9B9B9;
 	box-shadow: inset 0px 0px 38px rgba(27, 100, 217, 0.43),0px 5px 90px rgba(0, 0, 0, 0.53);
+	margin-bottom:60px;
+	border-radius: 5px;
+}
+
+.test {
+	display:table-cell;
+	width:1px;
 }
 
 /* HOME */
@@ -79,16 +96,33 @@
 	width: 100%;
 }
 	.cocktail > img {
-		margin-top: -60px;
+		border-bottom: 4px solid #BC8D8D;
+		border-right: 4px solid #BC8D8D;
+		border-bottom-right-radius: 20px;
+		margin: -60px 10px 10px -2px;
 		float:left;
-		height: 250px;
+		height: 300px;
 	}
 	.cocktail > div {
 		margin: 60px 0px;
 		text-align: center;
 		float: center;
 	}
-
+	.cocktail h2 > span {
+		background: linear-gradient(rgba(21, 159, 59, 0.7),rgba(69, 201, 96, 0.66));
+		color: #110BAA;
+		padding: 5px 20px;
+		border-radius: 20px 5px 20px 5px;
+	}
+.cocktail > p {
+	text-indent: 60px;
+	font-size: 18px;
+	width: 100%;
+	padding: 20px 50px;
+	text-align: justify;
+	color: #0F0681;
+}
+	
 body {
 	font-family: Amaranth, Verdana, serif;
 	min-width:1080px;
