--- a/css/general.css
+++ b/css/general.css
@@ -38,12 +38,13 @@
 
 /* HOME */
 .cocktail_resume {
-	width: 19%;
+	width: 18%;
 	margin: 3%;
 	display:inline-block;
 	text-align: center;
 	border-radius: 15px/8px;
 	line-height: 2.4;
+	height:300px;
 }
 	.cocktail_resume img {
 		max-width:100%;
@@ -52,22 +53,24 @@
 		max-width: 90%;
 		max-height: 90%;
 	}
-	.cocktail_resume .flip > div {
+	.cocktail_resume .panel, .cocktail_resume .front, .cocktail_resume .back {
 		width: 100%;
+		height:100%
+
 	}
-	.cocktail_resume .flip > div.favorite {
+	.cocktail_resume .panel .favorite {
 		border-bottom: 4px solid #D7D31D;
 		background: linear-gradient(rgba(232, 232, 118, 0.15),rgba(206, 198, 59, 0.63));
 	}
-	.cocktail_resume .flip > div {
+	.cocktail_resume .panel > .front {
 		border-bottom: 4px solid #5CCF9B;
 		background: linear-gradient(rgba(113, 222, 100, 0.03),rgba(113, 222, 100, 0.3));
 	}
-		.cocktail_resume .flip > div > div {
+		.cocktail_resume .panel > div > div {
 			height: calc(100% - 40px);
 			display: flex;
 		}
-		.cocktail_resume .flip > div > h5 {
+		.cocktail_resume .panel > div > h5 {
 			height:25px;
 		}
 		.star {
@@ -76,27 +79,27 @@
 			margin-left: -20px !important;
 			width: 40px;
 		}
-	.cocktail_resume .flip > div:last-child {
+	.cocktail_resume .back {
 		width: 100%;
 		border-bottom: 4px solid #3D47BF;
 		background: linear-gradient(rgba(28, 39, 172, 0.03), rgba(61, 71, 191, 0.3));
 		transform: rotateX(180deg) rotateZ(180deg);
 		color: #E03939;
 	}
-		.cocktail_resume .flip > div:last-child > * {
+		.cocktail_resume .back > * {
 			width: 100%;
 		}
-		.cocktail_resume .flip > div:last-child > h4 {
+		.cocktail_resume .back > h4 {
 			text-decoration: underline;
 			color:#3D47BF;
 		}
-		.cocktail_resume .flip > div:last-child li {
+		.cocktail_resume .back li {
 			list-style-image : url("../Graphics/losange.png");
 			text-align: left;
 			font-size: 16px;
 			line-height: 2;
 		}
-		.cocktail_resume .flip > div:last-child > a {
+		.cocktail_resume .back > a {
 			position: absolute;
 			bottom: 0;
 			display: block;
