--- a/css/general.css
+++ b/css/general.css
@@ -36,6 +36,20 @@
 	width:1px;
 }
 
+.nav_ingredients {
+	margin-top: -20px;
+}
+
+.nav_ingredients > li {
+	padding:0;
+	border-bottom : 2px solid #222;
+}
+
+.breadcrumb {
+	font-size: 16px;
+	padding: 13px 20px;
+}
+
 .sous_menus {
 	-webkit-padding-start: 17px;
 }
